syntax = "proto3";

package Protos;

message SensorData {
    string pacifier_id = 1;
    string sensor_type = 2;
    string sensor_group = 3;
    map<string, bytes> data_map = 4;
}

message IMUData {
    message GyroData {
        float gyro_x = 1;
        float gyro_y = 2;
        float gyro_z = 3;
    }
    repeated GyroData gyros = 1;

    message MagData {
        float mag_x = 1;
        float mag_y = 2;
        float mag_z = 3;
    }
    repeated MagData mags = 2;

    message AccData {
        float acc_x = 1;
        float acc_y = 2;
        float acc_z = 3;
    }
    repeated AccData accs = 3;
}

message PPGData {
    message LedData {
        int32 led_1 = 1;
        int32 led_2 = 2;
        int32 led_3 = 3;
    }
    repeated LedData leds = 1;

    message TemperatureData {
        float temperature_1 = 1;
    }
    repeated TemperatureData temperatures = 2;
}
